# sol

./: .gitattributes  .gitignore  BUILD_NOTES.md  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  synthetic_solar_maximum.ppm
.github/workflows/: apply-precision-migrations.yml  apply-rise-set-precision.yml  ci.yml  daily-ingest.yml  deploy-pages.yml  docs-links.yml  docs.yml  eop-freshness.yml  ephemeris-accuracy.yml  ephemeris-contract-diagnostics.yml  fuzz.yml  precision-diagnostics.yml  publish-crate.yml
apps/web/: app.js  engine.js  index.html  manifest.webmanifest  package.json  styles.css  sw.js
apps/web/data/: feed-status.json  latest-observations.json  latest-state.json
apps/web/data/series/: frame-00.json  frame-01.json  frame-02.json  frame-03.json  frame-04.json  frame-05.json  frame-06.json  frame-07.json  frame-08.json  frame-09.json  frame-10.json  manifest.json
apps/web/js/: accuracy.js  aurora.js  bodyData.js  celestial.js  config.js  data.js  dom.js  ephemerisContract.js  format.js  galacticobjects.js  orrery.js  orreryDetail.js  orreryGalaxy.js  orreryMath.js  orreryShaders.js  panels.js  render.js  selectors.js  sky.js  skyEngine.js  smallbodies.js  starcatalog.js  starphysics.js  store.js  sunlayers.js  system.js  timeline.js  tooltip.js  tour.js  view.js  wavelength.js
apps/web/pkg/: solar_ephemeris.wasm  solar_wasm.wasm
crates/solar-assimilation/src/: lib.rs
crates/solar-cli/: Cargo.toml
crates/solar-cli/src/: main.rs
crates/solar-core/: Cargo.toml
crates/solar-core/src/: active_region.rs  assimilation.rs  constants.rs  contracts.rs  coordinates.rs  differential_rotation.rs  field.rs  flux_transport.rs  grid.rs  json_read.rs  lib.rs  synthetic.rs
crates/solar-ephemeris/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/solar-ephemeris/examples/: snapshot.rs
crates/solar-ephemeris/fuzz/: Cargo.toml
crates/solar-ephemeris/fuzz/fuzz_targets/: elpmpp02.rs  top2013.rs  vsop2013.rs
crates/solar-ephemeris/src/: binread.rs  blob_validate.rs  bodies.rs  coords.rs  earth_orientation.rs  elpmpp02.rs  elpmpp02_data.rs  lib.rs  physics.rs  planets.rs  stars.rs  time.rs  timescales.rs  top2013.rs  top2013_data.rs  vsop2013.rs  vsop2013_data.rs
crates/solar-gpu/shaders/: assimilate_blend.wgsl  diffuse.wgsl  rotate.wgsl
crates/solar-ingest/: Cargo.toml
crates/solar-ingest/src/: lib.rs
crates/solar-ml/src/: lib.rs
crates/solar-wasm/: Cargo.toml
crates/solar-wasm/src/: lib.rs
docs/: DAILY_INGEST.md  DATA_SOURCES.md  GPU_NPU_BACKENDS.md  HANDOFF.md  INSTRUCTIONS.md  MATH.md  OPERATIONAL_READINESS.md  OPERATIONS.md  RFC_ALIGNMENT.md  ROADMAP.md  SOLAR_SYSTEM_SPEC.md  SPEC.md  STATUS.md  SWPC_SCHEMA_CHANGE_2026_03_31.md  WEB_REDESIGN_SPEC.md  ephemeris-snapshot-v2.schema.json  solar-state-snapshot-v1.schema.json  solar-state-snapshot-v2.schema.json
docs/adr/: 0001-native-esm-and-raw-wasm.md  0002-provider-neutral-snapshot-v2.md  0003-location-time-and-privacy.md  0004-ci-and-deployment-integrity.md  0005-assimilation-wiring.md
notebooks/: solar-maximum-experiment.ipynb  solar-maximum-lab.ipynb
python/: prototype_solar_maximum.py  swpc_schema_probe.py
services/ephemeris-server/: README.md  server.py  test_server.py
tests/fixtures/: live-swpc-normalized.json
tests/golden_snapshots/: README.md
tests/swpc_scn26_21/: legacy_header_row_quoted.json  rtsw_mag_1m_new.json  rtsw_wind_1m_new.json
tests/web/: aurora.test.mjs  format.test.mjs  orreryMath.test.mjs  selectors.test.mjs  smallbodies.test.mjs
tools/: apply_clippy_fix.py  apply_ephemeris_core_p0.py  apply_ephemeris_serializer_p0.py  apply_ephemeris_validator_main_p0.py  apply_ephemeris_validator_query_p0.py  apply_rise_set_precision.py  apply_sky_timezone_copy.py  apply_solar_fixture_v2.py  browser_smoke.py  build_wasm.ps1  build_wasm.py  build_web.py  check_eop_freshness.py  check_external_links.py  fetch_public_data.py  fetch_textures.py  generate_fixture_snapshot.py  generate_series.py  generate_star_catalog.py  install_daily_ingest_task.ps1  jsonschema_min.py  run_daily_ingest.py  snapshot_semantics.py  stress_moon_syzygy.py  test_ephemeris_contract.mjs  typecheck_web.py  validate_docs.py  validate_ephemeris.py  validate_ephemeris_snapshot.py  validate_notebook.py  validate_operational_readiness.py  validate_snapshot.py  validate_star_catalog.py  validate_web_static.py  watch-ci.sh
tools/ephemeris-data/: README.md  dump_elp.js  dump_vsop.js  gen_top.js  pack_elp.py  pack_vsop.py
tools/ephemeris-data/stars/: README.md  hipparcos_mag7.json  pyephem_bright_stars.edb
