[package]
name = "solar-ingest"
# Inherit like every sibling: the hand-written copies here had already drifted once.
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SWPC schema-era scaffolding and observation-frame reports for the Solar Maximum Engine"

[lib]
name = "solar_ingest"
path = "src/lib.rs"
