[package]
name = "solar-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raw-ABI WebAssembly wrapper running solar-core in the browser (no wasm-bindgen)"

# Raw cdylib for wasm32-unknown-unknown. No wasm-bindgen / wasm-pack: a tiny
# extern "C" ABI marshals the JSON snapshot through linear memory, so the only
# toolchain needed is cargo + the wasm32 target. Keeps the zero-dependency ethos.
[lib]
name = "solar_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
solar-core = { path = "../solar-core" }
